--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,9 @@ edition = "2021"
 [dependencies]
 cached = "0.49.2"
 closure = "0.3.0"
-crossterm = "0.27.0"
-cursive = { git = "https://github.com/gyscos/cursive"}
-debounce = "0.2.2"
+cursive = { git = "https://github.com/gyscos/cursive", features=["crossterm-backend"]}
 dirs = "5.0.1"
 itertools = "0.12.1"
-memoize = {version="0.4.2",features=["full"]}
-ncurses = "5.101.0"
 owning_ref = "0.4.1"
 regex = "1.10.4"
 unicode-width = "0.1.11"
